refactor - zduplikowana metoda